# kevinbotv3

./: Deployfile.toml  README.md  pyproject.toml
deploy/: options.toml
src/kevinbotv3/: __main__.py  audioutils.py  core.py  main.py  piper.py  runtime.py  util.py
src/kevinbotv3/commands/: drivebase_hold_command.py  lighting_commands.py  speech_command.py
src/kevinbotv3/kevinbot_mc/: _sim.py  config.py  controls.py  motor.py  protocol.py  signals.py
src/kevinbotv3/kevinbot_mc/connection/: abstract.py  serial.py  sim.py
src/kevinbotv3/settings/: schema.py
src/kevinbotv3/tools/: autoinstall.py  cli.py  tts.py
