[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kevinbotv3"
dynamic = ["version"]
description = 'Kevinbot v3 Robot Code'
readme = "README.md"
requires-python = ">=3.11"
license = "LGPL-3.0-or-later"
keywords = []
authors = [
  { name = "meowmeowahr", email = "meowmeowahr@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "kevinbotlib>=1.0.0a11",
    "kevinbotlib-deploytool>=0.0.1a2",
    "pydantic>=2.10.6",
    "tomli>=2.2.1",
]

[project.urls]
Documentation = "https://github.com/meowmeowahr/kevinbotv3#readme"
Issues = "https://github.com/meowmeowahr/kevinbotv3/issues"
Source = "https://github.com/meowmeowahr/kevinbotv3"

[tool.hatch.version]
path = "src/kevinbotv3/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/kevinbotv3 tests}"

[tool.coverage.run]
source_pkgs = ["kevinbotv3", "tests"]
branch = true
parallel = true
omit = [
  "src/kevinbotv3/__about__.py",
]

[tool.coverage.paths]
kevinbotv3 = ["src/kevinbotv3", "*/kevinbotv3/src/kevinbotv3"]
tests = ["tests", "*/kevinbotv3/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
